[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fintoolsom"
dynamic = ["version"]
description = "Personal library for finantial calculations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Oliver Mohr B.", email = "oliver.mohr.b@gmail.com" },
]
keywords = ["fixed income", "dates", "rates", "curves"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Natural Language :: English",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "holidays>=0.58",
    "python-dateutil",
]

[project.urls]
Homepage = "https://github.com/oliverm91/fintoolsom"

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "pytest",
    "ruff",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
update_changelog_on_bump = true
tag_format = "v$version"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/fintoolsom"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
