[metadata]
name = fintoolsom
author = Oliver Mohr B.
author_email = oliver.mohr.b@gmail.com
version = 0.1.0
description = Personal library for finantial calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/fintoolsom
license_files = LICENSE
keywords = fixed income, dates, rates, curves
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    Natural Language :: English

[options]
package_dir=
    = src
packages=find:
python_requires = >=3.8
install_requires =
    numpy
    python-dateutil

[options.packages.find]
where=src