[metadata]
name = fintoolsom
author = Oliver Mohr B.
author_email = oliver.mohr.b@gmail.com
version = attr: fintoolsom.__version__
description = Personal library for finantial calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/fintoolsom
license_files = LICENSE
keywords = fixed income, dates, rates, curves
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    Natural Language :: English

[options]
package_dir=
    = src
exclude =
    tests
packages=find:
python_requires = >=3.11
install_requires =
    numpy
    pandas
    scipy
    holidays
    

[options.packages.find]
where=src
